hack/invalid-examples/v1alpha2/httproute/duplicate-header-match.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: duplicate-header-match
spec:
  rules:
  - matches:
    - headers:
      - name: foo
        value: bar
      - name: foo
        value: bar
