hack/invalid-examples/v1alpha2/httproute/duplicate-query-match.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: duplicate-query-match
spec:
  rules:
  - matches:
    - queryParams:
      - name: foo
        value: bar
      - name: foo
        value: bar
