hack/invalid-examples/v1alpha2/httproute/httproute-portless-backend.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: portless-backend
spec:
  parentRefs:
  - name: prod-web
  rules:
  - backendRefs:
    - name: foo
