hack/invalid-examples/v1alpha2/httproute/invalid-backend-port.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: invalid-backend-port
spec:
  rules:
  - backendRefs:
    - name: my-service1
      port: 800080
