hack/invalid-examples/v1alpha2/httproute/invalid-filter-empty.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: invalid-filter-empty
spec:
  rules:
  - filters:
    - type: RequestHeaderModifier
