hack/invalid-examples/v1alpha2/httproute/invalid-filter-wrong-field.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: invalid-filter-wrong-field
spec:
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestRedirect: 
        port: 443
